[package]
name = "ag"
version = "0.1.0"
edition = "2021"
authors = ["Kaede Fujisaki <kaede@hexe.net>"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0.51"
log="0.4.14"
env_logger = "0.9.0"
clap = "2.34.0"
byteordered = "0.6.0"
