[package]
name = "ag"
version = "0.1.0"
edition = "2021"
authors = ["Kaede Fujisaki <kaede@hexe.net>"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0.79"
log = "0.4.20"
chrono = "0.4.31"
fern = "0.6.2"
clap = "4.4.13"
byteordered = "0.6.0"
png = "0.17.10"
